# cyber-attachment

./: .gitignore  LICENSE  Procfile  pyproject.toml  requirements.txt
attachment/: db.sqlite3  manage.py
attachment/attachment/: asgi.py  settings.py  urls.py  wsgi.py
attachment/static/css/: style.css  survey.css
attachment/static/js/: script.js  surveys.js
attachment/surveys/: admin.py  models.py  prolific.py  urls.py  views.py
attachment/surveys/migrations/: 0001_initial.py  0001_squashed_0012_alter_survey_options.py  0002_answer.py  0003_remove_survey_title_and_more.py  0004_remove_question_survey_question_survey.py  0005_question_name.py  0006_survey_name_survey_slug.py  0007_question_options.py  0008_remove_question_options_questiontranslation_options.py  0009_alter_question_question_type.py  0010_answer_created_at.py  0011_alter_question_options_alter_survey_options.py  0012_alter_survey_options.py  0013_question_hidden_alter_answer_created_at_and_more.py  0014_alter_question_question_type_recording_squashed_0015_alter_recording_options_recording_language.py  0016_recording_uuid_alter_recording_answer_and_more.py  0017_screen_question_screen.py  0018_question_exclusion_value.py  0019_survey_next_survey.py  0020_alter_questiontranslation_language_and_more.py
attachment/surveys/templates/: base.html  survey.html  survey_submit.html
