[tool.poetry]
name = "attachment-project"
version = "0.1.0"
description = ""
authors = ["dvelez <danielvelezm@gmail.com>"]
readme = "README.md"
packages = [{include = "attachment_project"}]

[tool.poetry.dependencies]
python = "^3.11"
mysqlclient = "^2.1.1"
django = ">=4.1,<4.2"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"
django-heroku = "^0.3.1"
dj-database-url = "^2.0.0"
azure-core = "^1.29.5"
azure-storage-blob = "^12.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
